@@ -4,26 +4,27 @@
 #' @param id Character. A concatenation of a street's numeric ID, a whole number between 1 and 528, and a second number to identify the segment.
 #' @param zoom Logical.
 #' @param radius Numeric. Controls the degree of zoom. For values <= 5, the numeric ID of all cases or just the anchor case is plotted.
-#' @param all.cases Logical. When zoom = TRUE and radius <= 5, all.cases = TRUE plots the numeric ID of all cases; when all.cases = FALSE only the numeric ID of the anchor case is shown.
+#' @param cases Character. Plot cases: NULL, "anchors" or "all".
 #' @param unit Character. Unit of measurement: "meter" or "yard". Default is NULL, which returns the map's native scale.
 #' @seealso \code{\link{road.segments}}
 #' @return A base R graphics plot.
 #' @import graphics
-#' @section Notes: With Dodson and Tobler's data, a street (e.g., Broad Street) is often comprised of multiple straight line segments. To identify each segment individually, an additional number is appended to form a text string ID (e.g., "116-2").
+#' @section Notes: With Dodson and Tobler's data, a street (e.g., Broad Street) is often comprised of multiple straight line segments. To identify each segment individually, an additional number is appended to form a text string ID (e.g., "116-2").  See cholera::road.segments.
 #' @export
 #' @examples
 #' segmentLocator("190-1")
 #' segmentLocator("216-1")
 #' segmentLocator("216-1", unit = "meter")
 
-segmentLocator <- function(id, zoom = TRUE, radius = 0.5, all.cases = FALSE,
+segmentLocator <- function(id, zoom = TRUE, radius = 0.5, cases = "anchors",
   unit = NULL) {
+
   if (is.character(id) == FALSE) {
     stop('"id" must be a character.')
   }
 
   if (id %in% cholera::road.segments$id == FALSE) {
-    stop("Invalid segment ID.")
+    stop("Invalid segment ID. See cholera::road.segments.")
   }
 
   st <- cholera::road.segments[cholera::road.segments$id == id, ]
@@ -42,38 +43,36 @@ segmentLocator <- function(id, zoom = TRUE, radius = 0.5, all.cases = FALSE,
       asp = 1)
     invisible(lapply(roads.list, lines, col = "gray"))
 
-   } else if (zoom & radius <= 5) {
+   # } else if (zoom & radius <= 5) {
+  } else {
     plot(cholera::fatalities[, c("x", "y")], xlim = x.rng, ylim = y.rng,
       pch = NA, asp = 1)
     invisible(lapply(roads.list, lines, col = "gray"))
 
-    seg.ortho <- cholera::ortho.proj[cholera::ortho.proj$road.segment == id, ]
-    seg.anchors <- cholera::fatalities.address$anchor.case %in% seg.ortho$case
-    seg.cases <- cholera::fatalities$case %in% seg.ortho$case
+    if (is.null(cases) == FALSE) {
+      seg.ortho <- cholera::ortho.proj[cholera::ortho.proj$road.segment == id, ]
+      seg.anchors <- cholera::fatalities.address$anchor.case %in% seg.ortho$case
+      seg.cases <- cholera::fatalities$case %in% seg.ortho$case
 
-    if (all.cases) {
-      text(cholera::fatalities[!seg.cases, c("x", "y")],
-        labels = cholera::fatalities$case[!seg.cases], cex = 0.5)
-      if (any(seg.cases)) {
-        text(cholera::fatalities[seg.cases, c("x", "y")],
-          labels = cholera::fatalities$case[seg.cases], cex = 0.5,
-          col = "red")
-      }
-    } else {
-      text(cholera::fatalities.address[!seg.anchors, c("x", "y")],
-        labels = cholera::fatalities.address$anchor.case[!seg.anchors],
-        cex = 0.5)
-      if (any(seg.anchors)) {
-        text(cholera::fatalities.address[seg.anchors, c("x", "y")],
-          labels = cholera::fatalities.address$anchor.case[seg.anchors],
-          cex = 0.5, col = "red")
+      if (cases == "all") {
+        text(cholera::fatalities[!seg.cases, c("x", "y")],
+          labels = cholera::fatalities$case[!seg.cases], cex = 0.5)
+        if (any(seg.cases)) {
+          text(cholera::fatalities[seg.cases, c("x", "y")],
+            labels = cholera::fatalities$case[seg.cases], cex = 0.5,
+            col = "red")
+        }
+      } else if (cases == "anchors") {
+        text(cholera::fatalities.address[!seg.anchors, c("x", "y")],
+          labels = cholera::fatalities.address$anchor.case[!seg.anchors],
+          cex = 0.5)
+        if (any(seg.anchors)) {
+          text(cholera::fatalities.address[seg.anchors, c("x", "y")],
+            labels = cholera::fatalities.address$anchor.case[seg.anchors],
+            cex = 0.5, col = "red")
+        }
       }
     }
-
-  } else {
-    plot(cholera::fatalities[, c("x", "y")], xlim = x.rng, ylim = y.rng,
-      pch = 15, cex = 0.5, col = "gray", asp = 1)
-    invisible(lapply(roads.list, lines, col = "gray"))
   }
 
   points(cholera::pumps[, c("x", "y")], pch = 17, cex = 1, col = "blue")
