@@ -4,7 +4,7 @@
 \alias{segmentLocator}
 \title{Locate road segment by ID.}
 \usage{
-segmentLocator(id, zoom = TRUE, radius = 0.5, all.cases = FALSE,
+segmentLocator(id, zoom = TRUE, radius = 0.5, cases = "anchors",
   unit = NULL)
 }
 \arguments{
@@ -14,7 +14,7 @@ segmentLocator(id, zoom = TRUE, radius = 0.5, all.cases = FALSE,
 
 \item{radius}{Numeric. Controls the degree of zoom. For values <= 5, the numeric ID of all cases or just the anchor case is plotted.}
 
-\item{all.cases}{Logical. When zoom = TRUE and radius <= 5, all.cases = TRUE plots the numeric ID of all cases; when all.cases = FALSE only the numeric ID of the anchor case is shown.}
+\item{cases}{Character. Plot cases: NULL, "anchors" or "all".}
 
 \item{unit}{Character. Unit of measurement: "meter" or "yard". Default is NULL, which returns the map's native scale.}
 }
@@ -25,7 +25,7 @@ A base R graphics plot.
 Highlights the selected road segment and its cases.
 }
 \section{Notes}{
- With Dodson and Tobler's data, a street (e.g., Broad Street) is often comprised of multiple straight line segments. To identify each segment individually, an additional number is appended to form a text string ID (e.g., "116-2").
+ With Dodson and Tobler's data, a street (e.g., Broad Street) is often comprised of multiple straight line segments. To identify each segment individually, an additional number is appended to form a text string ID (e.g., "116-2").  See cholera::road.segments.
 }
 
 \examples{
